# math3d

./: .gitignore  CMakeLists.txt  README.md
doc/: todo.txt
include/pt/: math.h
include/pt/HPL1/: Quaternion.h
include/pt/math/: FRotator.h  bool1.h  bool2.h  bool3.h  bool4.h  boolswizzle.h  float1.h  float2.h  float2swizzle.h  float3.h  float3swizzle.h  float4.h  float4swizzle.h  float4x4.h  floatswizzle.h  int1.h  int2.h  int3.h  int4.h  intswizzle.h  quaternion.h
projects/debian/: CMakeLists.txt
projects/win32/: CMakeLists.txt
projects/win64/: CMakeLists.txt
script/: build_debian.sh  build_debian_debug.sh  build_win64.sh  build_win64_debug.sh
src/: FRotator.cpp  constants.cpp  math.cpp  quaternion.cpp
src/HPL1/: Quaternion.cpp
